feature：记忆体系持续优化